--- a/index.css
+++ b/index.css
@@ -5,9 +5,27 @@
 }
 
 .front {
-  background: grey;
+  width: 200px;
+  height: 200px;
+  background: #9fbff2;
   width: 100%;
   height: 100%;
   text-align: center;
   margin: auto;
+}
+
+.back {
+  width: 200px;
+  height: 200px;
+  background: #729ce0;
+  width: 100%;
+  height: 100%;
+  text-align: center;
+  margin: auto;
+}
+
+span {
+  display: inline-block;
+  vertical-align: middle;
+  line-height: normal;
 }
