--- a/index.css
+++ b/index.css
@@ -1,30 +1,31 @@
-#card {
-  width: 200px;
+.card {
+  width: 400px;
   height: 200px;
   margin: auto;
+}
+
+.front, .back{
+  width: 400px;
+  height: 200px;
+  width: 100%;
+  height: 100%;
+  text-align: center;
+  margin: auto;
+  line-height: 200px;
+  text-align: center;
 }
 
 .front {
-  width: 200px;
-  height: 200px;
   background: #9fbff2;
-  width: 100%;
-  height: 100%;
-  text-align: center;
-  margin: auto;
 }
 
 .back {
-  width: 200px;
-  height: 200px;
   background: #729ce0;
-  width: 100%;
-  height: 100%;
-  text-align: center;
-  margin: auto;
 }
 
-span {
+img {
+  width: 80%;
+  height: auto;
   display: inline-block;
   vertical-align: middle;
   line-height: normal;
