--- a/index.css
+++ b/index.css
@@ -41,3 +41,17 @@ img {
   vertical-align: middle;
   line-height: normal;
 }
+
+h1 {
+  text-align: center;
+  margin-bottom: 5px;
+}
+
+p {
+  margin-top: 0px;
+  text-align: center;
+}
+
+body {
+  margin: 0;
+}
