--- a/templates/index.html
+++ b/templates/index.html
@@ -126,38 +126,43 @@
       <div class="submit-button">
         <button id="btnSubmit" type="submit">Check Answers</button>
     </div> -->
+    if response_error_message = nil:
+        <div class="answers">
+            <p> The answer to question 1 is -sinx
 
-      <div class="answers">
-        <p> The answer to question 1 is -sinx
+                {% if 'first_question' in session %}
+                    Your answer to the first question was {% response_question_info["first_question"] %} <br>
+                {% endif %}
+            <br><br>
 
-            {% if 'firstQuestion' in session %}
-                Your answer to the first question was {{ session['firstQuestion'] }} <br>
-            {% endif %}
-        </p>
+                The answer to question 2 is cosx
+                {% if 'second_question in session %}
+                    Your answer to the Second Question was {% response_question_info["second_question"] %}
+                {% endif %}
+            <br><br>
 
-        <p> The answer to question 2 is cosx
+                The answer to question 3 is n(x^(n-1))
 
-            {% if 'secondQuestion' in session %}
-                Your answer to the Second Question was {{ session['secondQuestion'] }}
-            {% endif %}
-        </p>
+                {% if 'third_question' in session %}
+                    Your answer to the third question is {% response_question_info["third_question"] %}
+                {% endif %}
+            <br><br>
 
-        <p> The answer to question 3 is n(x^(n-1))
+                The answer to question 4 is sec^2(x)
 
-            {% if 'thirdQuestion' in session %}
-                Your answer to the third question is {{ session['thirdQuestion'] }}
-            {% endif %}
-        </p>
+                {% if 'fourth_question' in session %}
+                    Your answer to the fourth question is {% response_question_info["fourth_question"] %}
+                {% endif %}
+            <br>
 
-        <p> The answer to question 4 is sec^2(x)
+                You scored a {% response_score %} percent!
+    else:
+        <!-- throw some sort of error message  --> 
 
-            {% if 'forthQuestion' in session %}
-                Your answer to the fourth question is {{ session['fourthQuestion'] }}
-            {% endif %}
         </p>
       </div>
 
-    </div> 
+    </div>
 
   </body>
 </html>
