--- a/templates/index.html
+++ b/templates/index.html
@@ -156,8 +156,10 @@
             <br>
 
                 You scored a {% response_score %} percent!
+                The highest score is session["highest_score"]
     else:
-        <!-- throw some sort of error message  --> 
+        <!-- throw some sort of error message  -->
+        <p> response_error_message </p> 
 
         </p>
       </div>
