Fixed image links

--- a/templates/index.html
+++ b/templates/index.html
@@ -40,19 +40,19 @@
     <div class="right-column">
       <div class="card">
         <div class="front">
-          <img src="images/power_rule_front.png" alt="Power Rule">
+          <img src="{{url_for('static',filename='images/power_rule_front.png')}}" alt="Power Rule">
         </div>
         <div class="back">
-          <img src="images/power_rule_back.png" alt="Power Rule">
+          <img src="{{url_for('static',filename='images/power_rule_back.png')}}" alt="Power Rule">
         </div>
       </div>
 
       <div class="card">
         <div class="front">
-          <img src="images/tanx_front.png" alt="d/dx(tanx)">
+          <img src="{{url_for('static',filename='images/tanx_front.png')}}" alt="d/dx(tanx)">
         </div>
         <div class="back">
-          <img src="images/tanx_back.png" alt="sec^2*x">
+          <img src="{{url_for('static',filename='images/tanx_back.png')}}" alt="sec^2*x">
         </div>
       </div>
     </div>
