Added value to the rest of the form questions

--- a/templates/index.html
+++ b/templates/index.html
@@ -67,22 +67,22 @@
       <input type="radio" name="first_question" value="n(x^(n-1))">n(x^(n-1))</label><br/>
 
       2.) What is the the trig identity of d/dx f(sinx)<br>
-      <input type="radio" name="second_question">cosx</label><br/>
-      <input type="radio" name="second_question">sec^2(x)</label><br/>
-      <input type="radio" name="second_question">-sinx</label><br/>
-      <input type="radio" name="second_question">n(x^(n-1))</label><br/>
+      <input type="radio" name="second_question" value="cosx">cosx</label><br/>
+      <input type="radio" name="second_question" value="sec^2(x)">sec^2(x)</label><br/>
+      <input type="radio" name="second_question" value="-sinx">-sinx</label><br/>
+      <input type="radio" name="second_question" value="n(x^(n-1))">n(x^(n-1))</label><br/>
 
       3.) What is the the trig identity of d/dx f(x^n)<br>
-      <input type="radio" name="third_question">cosx</label><br/>
-      <input type="radio" name="third_question">sec^2(x)</label><br/>
-      <input type="radio" name="third_question">-sinx</label><br/>
-      <input type="radio" name="third_question">n(x^(n-1))</label><br/>
+      <input type="radio" name="third_question" value="cosx">cosx</label><br/>
+      <input type="radio" name="third_question" value="sec^2(x)">sec^2(x)</label><br/>
+      <input type="radio" name="third_question" value="-sinx">-sinx</label><br/>
+      <input type="radio" name="third_question" value="n(x^(n-1))">n(x^(n-1))</label><br/>
 
       4.) What is the the trig identity of d/dx f(tanx)<br>
-      <input type="radio" name="fourth_question">cosx</label><br/>
-      <input type="radio" name="fourth_question">sec^2(x)</label><br/>
-      <input type="radio" name="fourth_question">-sinx</label><br/>
-      <input type="radio" name="fourth_question">n(x^(n-1))</label><br/>
+      <input type="radio" name="fourth_question" value="cosx">cosx</label><br/>
+      <input type="radio" name="fourth_question" value="sec^2(x)">sec^2(x)</label><br/>
+      <input type="radio" name="fourth_question" value="-sinx">-sinx</label><br/>
+      <input type="radio" name="fourth_question" value="n(x^(n-1))">n(x^(n-1))</label><br/>
 
       <input type="submit" value="Submit">
      </form>
