CSS not loading. Heroku Test.

--- a/static/index.css
+++ b/static/index.css
@@ -38,8 +38,14 @@
   text-align: center;
 }
 
-table {
-    margin: auto;
+.table {
+
+}
+
+#test-id {
+    width: 50%;
+    margin: 25%;
+    padding: 0;    
 }
 
 img {
